--- a/profile/Rakefile
+++ b/profile/Rakefile
@@ -5,4 +5,9 @@ require 'minitest/autorun'
 require 'minitest/pride'
 
 task :default do
+  describe "style.css" do
+    it "should have your custom code (more than 5 lines!)" do
+      (File.open("profile/style.css","r").readlines.size > 5).must_equal true
+    end
+  end
 end
